# pychnosz

./: .gitignore  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
html/pychnosz/: index.html
html/pychnosz/biomolecules/: index.html  proteins.html
html/pychnosz/core/: animation.html  balance.html  equilibrium.html  index.html  speciation.html  thermocalc.html  unicurve.html
html/pychnosz/data/: add_obigt.html  index.html  loader.html  mod_obigt.html  obigt.html  worm.html
html/pychnosz/fortran/: h2o92_interface.html  index.html
html/pychnosz/geochemistry/: index.html  minerals.html  redox.html
html/pychnosz/models/: activity.html  archer_wang.html  berman.html  dew.html  high_pt.html  hkf_helpers.html  iapws95.html  index.html  supcrt92_fortran.html
html/pychnosz/utils/: expression.html  formula.html  formula_ox.html  index.html  units.html
pychnosz/: __init__.py
pychnosz/biomolecules/: __init__.py  ionize_aa.py  proteins.py
pychnosz/core/: __init__.py  affinity.py  animation.py  balance.py  basis.py  diagram.py  equilibrate.py  equilibrium.py  info.py  retrieve.py  speciation.py  species.py  subcrt.py  thermo.py  unicurve.py
pychnosz/data/: __init__.py  add_obigt.py  loader.py  mod_obigt.py  obigt.py  worm.py
pychnosz/data/extdata/Berman/: Got04_2004.csv
pychnosz/fortran/: __init__.py  h2o92_interface.py
pychnosz/geochemistry/: __init__.py  minerals.py  redox.py
pychnosz/models/: __init__.py  archer_wang.py  berman.py  cgl.py  dew.py  hkf.py  hkf_helpers.py  iapws95.py  supcrt92_fortran.py  water.py
pychnosz/utils/: __init__.py  expression.py  formula.py  formula_ox.py  reset.py  units.py
test/: 1-Geothermometry.ipynb  2-Univariant-Curves-T-P.ipynb  3-Univariant-Curves-T-or-P-logK.ipynb
